// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the clas when hovered 1`] = `
<a
  className="normal"
  href="http://www.google.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Google
</a>
`;

exports[`Link changes the clas when hovered 2`] = `
<a
  className="hovered"
  href="http://www.google.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Google
</a>
`;

exports[`Link changes the clas when hovered 3`] = `
<a
  className="hovered"
  href="http://www.google.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Google
</a>
`;
